# Distill

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
distill/: __init__.py  __main__.py  agent.py  cli.py  writer.py
distill/agents/: __init__.py  digest.py  gaps.py
distill/templates/: note.md.j2
distill/tools/: __init__.py  digest.py  gaps.py  linker.py  parse.py  vault.py  write.py
